--- a/package.json
+++ b/package.json
@@ -1,24 +1,22 @@
 {
-  "name": "jsdoc-template",
-  "version": "2.0.1",
+  "name": "@melonjs/jsdoc-template",
+  "version": "2.0.2",
   "description": "melonJS JSDoc Template",
   "main": "publish.js",
   "scripts": {
-    "serve": "gulp serve"
+    "serve": "gulp serve",
+    "release": "npm publish --access public"
   },
   "files": [
-   "static",
-   "tmpl",
-   "publish.js"
- ],
- "author": {
-   "name": "Olivier Biot",
-   "email": "contact@melonjs.org"
- },
+    "static",
+    "tmpl",
+    "publish.js"
+  ],
+  "author": "Olivier Biot <contact@melonjs.org>",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/melonjs/jsdoc-template.git"
+    "url": "git+https://github.com/melonjs/jsdoc-template.git"
   },
   "bugs": {
     "url": "https://github.com/melonjs/jsdoc-template/issues"
@@ -41,7 +39,5 @@
     "gulp-jsdoc3": "^1.0.1",
     "jsdoc": "^3.5.3"
   },
-  "scripts": {
-   "release": "npm publish --access public"
-  }
+  "homepage": "https://github.com/melonjs/jsdoc-template#readme"
 }
